--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "debug": "~4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
